--- a/Trips/ClientApp/package.json
+++ b/Trips/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "all": "0.0.0",
     "axios": "^0.19.2",
     "babel-eslint": "10.0.1",
     "bootstrap": "^4.1.3",
@@ -11,10 +12,13 @@
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
+    "react-thunk": "^1.0.0",
     "reactstrap": "^6.3.0",
+    "redux": "^4.0.5",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
